2006-08-07 Philip Turnbull <philip.turnbull@gmail.com>

	* MonoDevelop.Projects.Gui/IconService.cs:
	Added GetIcon method for indexers.

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
	Track API changes in Ambience.

2006-08-08 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/DeploymentOptionsPanel.cs:
	* Base.glade: Allow setting the default deploy target in
	  the deployment options panel.

2006-08-04 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Properly handle the case when the completion list is empty
	  (this may happen if the parser database is being generated).

2006-07-29 Matej Urbas <matej.urbas@gmail.com>

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs: Base types of
	  classes were not displayed. Fixed that.

2006-07-28 Matej Urbas <matej.urbas@gmail.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Fixed the completion
	  popup so that it doesn't use Pango markup for displaying type names.
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs: Changed the
	  way names are generated for types in code completion.

2006-07-25 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Deployment/FileDeployTargetEditor.cs:
	  Fix incorrect type check.
	
	* MonoDevelop.Projects.Gui.Completion/ICompletionDataProvider.cs:
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  When the code completion window is shown and the parser database
	  is still being generated, the completion window will now show a message
	  saying that class information is being gathered.

2006-07-17 Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Removed unused file.

2006-07-12 Lluis Sanchez Gual  <lluis@novell.com>
