@@ -1,3 +1,9 @@
+2006-08-10 Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
+	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
+	  Provide the ambience to use for code completion as a parameter.
+
 2006-08-07 Philip Turnbull <philip.turnbull@gmail.com>
 
 	* MonoDevelop.Projects.Gui/IconService.cs:
